k8s/overlays/nerc-shift-1/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
      nginx.ingress.kubernetes.io/proxy-buffering: "on"
      nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
      nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
      route.openshift.io/termination: reencrypt
    labels:
      app: keycloak
    name: keycloak
    namespace: keycloak
  spec:
    rules:
    - host: keycloak.mss.mghpcc.org
      http:
        paths:
        - backend:
            service:
              name: keycloak
              port:
                number: 8443
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - keycloak.mss.mghpcc.org
      secretName: keycloak-tls  # pragma: allowlist secret
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
